--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Amiri', 'Tahoma', sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('images/bodybgg.png');
+  background-image: url('bodybgg.png');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
